--- a/main.html
+++ b/main.html
@@ -8,8 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+		<h2>Feedback Form</h2>
+		<label for="name">Name</label>
+		<input type="text" name = "name" id = "name" minlength="3" maxlength="50"/><br>
+
+		<label for ="portfolio">Portfolio</label>
+		<input type="url" name="portfolio" id="portfolio" required/><br>
+
+		<label for="favcolor">Favorite Color</label>
+		<input type="color" name="favcolor" id="favcolor"/><br>
+
+		<label for="likeness">Likeness</label>
+		<input type="range" name="likeness" id="likeness" min="1" max="100"/>
+
+	</form>
+		
     <script type="text/javascript" src="./script.js">
 </script>
+	
+	
 
 </body>
 
