--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="" method="post">
+	<form  method="post">
 		<h2>Feedback Form</h2>
 		<label for="name">Name</label>
 		<input type="text" name = "name" id = "name" minlength="3" maxlength="50"/><br>
