--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
 	<form  method="post">
 		<h2>Feedback Form</h2>
 		<label for="name">Name</label>
-		<input type="text" name = "name" id = "name" minlength="3" maxlength="50"/><br>
+		<input type="text" name = "name" id = "name" minlength="3" maxlength="50" required><br>
 
 		<label for ="portfolio">Portfolio</label>
-		<input type="url" name="portfolio" id="portfolio" required/><br>
+		<input type="url" name="portfolio" id="portfolio" required><br>
 
 		<label for="favcolor">Favorite Color</label>
-		<input type="color" name="favcolor" id="favcolor"/><br>
+		<input type="color" name="favcolor" id="favcolor" required><br>
 
 		<label for="likeness">Likeness</label>
-		<input type="range" name="likeness" id="likeness" min="1" max="100"/>
+		<input type="range" name="likeness" id="likeness" min="1" max="100" required>
 
 	</form>
 		
