--- a/main.html
+++ b/main.html
@@ -8,20 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form  method="post">
-		<h2>Feedback Form</h2>
+	<h2>Feedback Form</h2>
+	<form  action="#" method="post">
+		
 		<label for="name">Name</label>
-		<input type="text" name = "name" id = "name" minlength="3" maxlength="50" required><br>
+		<input type="text" id= "name" name= "name" minlength="3" maxlength="50" required><br>
 
 		<label for ="portfolio">Portfolio</label>
-		<input type="url" name="portfolio" id="portfolio" required><br>
+		<input type="url" id="portfolio" name="portfolio" required><br>
 
-		<label for="favcolor">Favorite Color</label>
-		<input type="color" name="favcolor" id="favcolor" required><br>
+		<label for="favColor">Favorite Color</label>
+		<input type="color" id="favColor" name="favColor" required><br>
 
 		<label for="likeness">Likeness</label>
-		<input type="range" name="likeness" id="likeness" min="1" max="100" required>
-
+		<input type="range" id="likeness" name="likeness" min="1" max="100" required><br>
 	</form>
 		
     <script type="text/javascript" src="./script.js">
